[gd_scene load_steps=4 format=3 uid="uid://b66ivipvk8221"]

[ext_resource type="Script" uid="uid://d3sa1f7i26mbi" path="res://scenes/minibox.gd" id="1_slvxl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4y86"]
bg_color = Color(0.8627451, 0.49411765, 0.15294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slvxl"]
bg_color = Color(1, 1, 1, 1)

[node name="MiniBox" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_slvxl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_w4y86")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Button1" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_slvxl")

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_slvxl")

[node name="Button3" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_slvxl")

[node name="Button4" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_slvxl")

[node name="Button5" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_slvxl")

[connection signal="pressed" from="PanelContainer/HBoxContainer/Button1" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button2" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button3" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button4" to="." method="_on_button_pressed" binds= [3]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button5" to="." method="_on_button_pressed" binds= [4]]
